# learn_poetry_starlette

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
learn/: main.py
learn/app/: index.py  json.py
learn/settings/: directory.py  routes.py
learn/templates/: index.html
learn/tests/: test_learn.py
