[tool.poetry]
name = "learn"
version = "0.1.0"
description = ""
authors = ["Suzukey"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
uvicorn = "^0.11.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
